# bechelor_thesis

./: README.md
project/: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
project/autom4te.cache/: output.0  output.1  requests  traces.1
project/include/: Codec.hpp  Configuration.hpp  Globals.hpp  Http.hpp  Http1_0.hpp  Http1_1.hpp  Http2_0.hpp  HttpGlobal.hpp  HttpGlobal2.hpp  HttpPacket.hpp  HttpPacketBase.hpp  HttpPacketBuilder.hpp  HttpPacketBuilderBase.hpp  Logger.hpp  SslConfig.hpp  TcpServer.hpp  ThreadPool.hpp  WebServer.hpp  WebServerError.hpp
project/resources/: WebServerd.conf  WebServerd.service  ecdsa.crt  ecdsa.key  resources.conf  rsa.crt  rsa.key
project/resources/defaults/: bad_request.html  content_too_large.html  forbidden.html  http_version_not_supported.html  index.html  internal_server_error.html  length_required.html  method_not_allowed.html  not_acceptable.html  not_found.html  service_unavailable.html  unsupported_media_type.html
project/scripts/: globals.sh  install.sh  uninstall.sh
project/src/: Codec.cpp  Configuration.cpp  Http.cpp  Http1_0.cpp  Http1_1.cpp  HttpGlobal.cpp  HttpPacket.cpp  HttpPacketBase.cpp  HttpPacketBuilder.cpp  HttpPacketBuilderBase.cpp  SslConfig.cpp  TcpServer.cpp  ThreadPool.cpp  WebServer.cpp  WebServerError.cpp  WebServerd.cpp
